# depthai-android-jni-example

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/: CMakeLists.txt
app/src/androidTest/java/com/example/depthai_android_jni_example/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  utils.cpp  utils.h
app/src/main/include/XLink/: XLink.h  XLinkDispatcher.h  XLinkErrorUtils.h  XLinkLog.h  XLinkMacros.h  XLinkPlatform.h  XLinkPlatformErrorUtils.h  XLinkPrivateDefines.h  XLinkPrivateFields.h  XLinkPublicDefines.h
app/src/main/include/depthai-bootloader-shared/: Bootloader.hpp  Config.hpp  Section.hpp  Structure.hpp
app/src/main/include/depthai-shared/common/: CameraBoardSocket.hpp  EepromData.hpp  Point2f.hpp  Point3f.hpp  Rect.hpp  Size2f.hpp
app/src/main/include/depthai-shared/datatype/: DatatypeEnum.hpp  RawAprilTagConfig.hpp  RawAprilTags.hpp  RawBuffer.hpp  RawCameraControl.hpp  RawFeatureTrackerConfig.hpp  RawIMUData.hpp  RawImageManipConfig.hpp  RawImgFrame.hpp  RawSpatialImgDetections.hpp  RawSpatialLocationCalculatorConfig.hpp  RawSpatialLocations.hpp  RawStereoDepthConfig.hpp  RawTrackedFeatures.hpp  RawTracklets.hpp
app/src/main/include/depthai-shared/device/: BoardConfig.hpp  PrebootConfig.hpp
app/src/main/include/depthai-shared/log/: LogMessage.hpp
app/src/main/include/depthai-shared/pipeline/: NodeConnectionSchema.hpp  NodeIoInfo.hpp
app/src/main/include/depthai-shared/properties/: ColorCameraProperties.hpp  DetectionNetworkProperties.hpp  GlobalProperties.hpp  IMUProperties.hpp  ImageManipProperties.hpp  MonoCameraProperties.hpp  ObjectTrackerProperties.hpp  Properties.hpp  SPIInProperties.hpp  ScriptProperties.hpp  SpatialDetectionNetworkProperties.hpp  StereoDepthProperties.hpp  VideoEncoderProperties.hpp  XLinkInProperties.hpp
app/src/main/include/depthai-shared/utility/: Serialization.hpp
app/src/main/include/depthai-shared/xlink/: XLinkConstants.hpp
app/src/main/include/depthai/pipeline/datatype/: ImgFrame.hpp
app/src/main/include/libusb/: CMakeLists.txt
app/src/main/include/libusb/libusb/os/: linux_android_jni.c  linux_usbfs.c
app/src/main/include/nop/base/: array.h  encoding.h  encoding_byte.h  logical_buffer.h  macros.h  map.h  optional.h  variant.h  vector.h
app/src/main/include/nop/rpc/: interface.h
app/src/main/include/nop/types/: result.h  variant.h
app/src/main/include/nop/utility/: buffer_reader.h  compiler.h
app/src/main/java/com/example/depthai_android_jni_example/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/com/example/depthai_android_jni_example/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
